--- a/BizWiz-Project/bizwizfrontend/src/components/SignUp.css
+++ b/BizWiz-Project/bizwizfrontend/src/components/SignUp.css
@@ -1,13 +1,13 @@
 body {
     font-family: "Acumin Variable Concept";
 }
-
+/*
 .title {
     height: 100px;
     width: 70%;
     background-color: #f1c418;
     margin: auto;
-    text-align: auto;
+    text-align: middle;
     vertical-align: middle;
     line-height: 100px;
     color: white;
@@ -26,13 +26,12 @@ body {
 }
 
 label {
-    width: 100%;
+    text-align: left;
     font-size: 1.75em;
-    float: left;
-    margin: 5px;
+    padding-left: 5%;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], textarea, select {
     width: 90%;
     padding: 12px 20px;
     margin: auto;
@@ -44,12 +43,8 @@ input[type=text], input[type=password] {
     font-size: large;
 }
 
-*:focus { 
-    outline: none;
-}
-
 input[type=submit] {
-    width: 30%;
+    width: 100px;
     background-color: #f1c418;
     color: white;
     padding: 14px 20px;
@@ -57,5 +52,11 @@ input[type=submit] {
     cursor: pointer;
     border: none;
     border-radius: 4px;
+    font-size: large;
+  }
+*/
+*:focus { 
+    outline: none;
 }
+
 
